--- a/Dockerfile_old
+++ b/Dockerfile_old
@@ -2,7 +2,7 @@
 ARG JAVA_VERSION="11"
 ARG JAVA_JVM=""
 
-FROM adoptopenjdk/openjdk${JAVA_VERSION}${JAVA_JVM}:alpine-jre
+FROM adoptopenjdk:openjdk${JAVA_VERSION}-jre${JAVA_JVM}
 
 LABEL maintainer="luca.chiabrera@gmail.com"
 
@@ -18,21 +18,13 @@ ENV OUTPUT_DIR ${WORK_DIR}/output
 ENV JAVA_OPTS ""
 ENV RENAISSANCE_OPTS "akka-uct"
 
-RUN apk update \
-    && apk upgrade \
-    && apk add ca-certificates \
-    && update-ca-certificates \
-    && apk add --no-cache \
-    curl \
-    && rm -rf /var/cache/apk/* \
-    && mkdir -p ${WORK_DIR} \
+RUN mkdir -p ${WORK_DIR} \
     && curl --location --silent --show-error --output ${WORK_DIR}/renaissance-gpl-${RENAISSANCE_VERSION}.jar https://github.com/renaissance-benchmarks/renaissance/releases/download/v${RENAISSANCE_VERSION}/renaissance-gpl-${RENAISSANCE_VERSION}.jar \
     && curl --location --silent --show-error --output ${WORK_DIR}/jmx_prometheus_javaagent-${JMX_EXPORTER_VERSION}.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/${JMX_EXPORTER_VERSION}/jmx_prometheus_javaagent-${JMX_EXPORTER_VERSION}.jar
 
 COPY exporter_config.yml ${WORK_DIR}/exporter_config.yml
 COPY parse_output-${RENAISSANCE_VERSION}.sh ${WORK_DIR}/parse_output-${RENAISSANCE_VERSION}.sh
 
-EXPOSE 9404
-EXPOSE 8780
+EXPOSE 9404 
 
 CMD java --version && java $JAVA_OPTS -javaagent:${WORK_DIR}/jmx_prometheus_javaagent-${JMX_EXPORTER_VERSION}.jar=9404:${WORK_DIR}/exporter_config.yml -jar ${WORK_DIR}/renaissance-gpl-${RENAISSANCE_VERSION}.jar $RENAISSANCE_OPTS --csv ${OUTPUT_DIR}/output.csv && sh ${WORK_DIR}/parse_output-${RENAISSANCE_VERSION}.sh
